[package]
name = "rust-minilp"
version = "0.1.0"
authors = ["Lukas Heidemann <lukas@heidemann.me>"]
edition = "2018"
licence = "BSD-3-Clause"
description = "JavaScript bindings to the Rust minilp linear program solver."
repository = "https://github.com/zrho/minilp-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { features = ["serde-serialize"], version = "0.2" }
minilp = "0.1"
serde = { features = ["derive"], version = "1.0" }
serde_json = "1.0"
